--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
     "name": "enzyme-get-wrapper",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "A tool for creating flexible Enzyme wrappers with less code.",
     "author": "Andrew Hillier <andrew.hillier09@gmail.com>",
     "license": "MIT",
     "main": "dist/index.js",
     "repository": "git@github.com:andrew09/enzyme-get-wrapper.git",
+    "keywords": [
+        "react",
+        "enzyme",
+        "jest",
+        "javascript",
+        "test",
+        "wrapper",
+        "mount"
+    ],
     "scripts": {
         "test": "jest --env=jsdom",
         "build": "parcel build src/index.js"
